add figure style

--- a/src/styles/Series.css
+++ b/src/styles/Series.css
@@ -44,3 +44,9 @@
     overflow: hidden;
     max-height: 800px;
 }
+
+.ulWrapper ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
