--- a/src/styles/Figure.css
+++ b/src/styles/Figure.css
@@ -1,5 +1,68 @@
-/* .roundedTwo */
-.roundedTwo {
+.figureWrapper {
+    padding: 5px;
+    background-color: white;
+    display: flex;
+    justify-content:space-between;
+    align-items:baseline;
+}
+
+.figureCheck {
+    padding: 0;
+    margin: 0;
+}
+
+.figureName {
+    padding: 0;
+    margin: 0;    
+}
+
+.figureButton {
+    padding: 0;
+    margin: 0;
+}
+
+.roundedOne {
+  width: 24px;
+  height: 24px;
+  position: relative;
+  margin: 0;
+  background-color: black;
+  border-radius: 50px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
+}
+.roundedOne label {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+
+  background-color: white;
+  border-radius: 50px;
 
 }
-/* end .roundedTwo */
+.roundedOne label:after {
+  content: '';
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: turquoise;
+  opacity: 0;
+  border-radius: 50px;
+}
+.roundedOne label:hover::after {
+  opacity: 0.3;
+}
+.roundedOne input[type=checkbox] {
+  visibility: hidden;
+}
+.roundedOne input[type=checkbox]:checked + label:after {
+  opacity: 1;
+}
+
+/* end .roundedOne */
