--- a/src/styles/TopLevel.css
+++ b/src/styles/TopLevel.css
@@ -9,6 +9,7 @@ html, body {
     width: 100%;
     height:100%;
     position: relative;
+    background-color: darkgrey;
 }
 
 header {
@@ -82,5 +83,5 @@ main {
     width: 90%;
     margin: 0 5%;
     top: 10px;
-    background-color: white;
+    background-color: darkgrey;
 }
