--- a/src/styles/WantList.css
+++ b/src/styles/WantList.css
@@ -1,3 +1,19 @@
+.topLevelChildrenWrapper {
+    position: relative;
+    width: 90%;
+    margin: 0 5%;
+    top: 10px;
+    background-color: #D6F2F6;
+    padding-bottom: 30px;
+}
+
+@media only screen and (max-width: 350px) {
+    .topLevelChildrenWrapper {
+        width: 98%;
+        margin: 0 1%;
+    }
+}
+
 .wantlistWrapper {
     background-color: white;
 }
