--- a/src/styles/CheckList.css
+++ b/src/styles/CheckList.css
@@ -3,7 +3,7 @@
     width: 90%;
     margin: 0 5%;
     top: 10px;
-    background-color: #D6F2F6;
+    background-color: white;
     padding-bottom: 30px;
 }
 
