--- a/src/styles/Figure.css
+++ b/src/styles/Figure.css
@@ -75,7 +75,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  background-color: turquoise;
+  background-color: #AFC23C;
   opacity: 0;
   border-radius: 50px;
 }
