--- a/src/styles/WantList.css
+++ b/src/styles/WantList.css
@@ -19,8 +19,8 @@
 }
 
 .wantlistWrapper h2 {
-    background-color: #035D82;
-    color: white;
+    background-color: #AFC23C;/*#035D82;*/
+    color: black;
     text-align: center;
     padding: 5px 0;
     margin: 0;
