--- a/src/styles/CheckList.css
+++ b/src/styles/CheckList.css
@@ -1,3 +1,30 @@
+.tOrHWrapper {
+    background-color: dimgrey;
+    width: 100%;
+}
+
+.tOrHWrapper button {
+    width: 50%;
+    margin: 10px 0 0;
+    padding: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: white;
+    border-style: solid;
+    border-width: 1vw;
+    border-color: white;
+    border-bottom: none;
+    border-top: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.tOrHWrapper button.notCurrent {
+    background-color: dimgrey;
+    border-color: dimgrey;
+    color: lightgrey;
+}
+
 .topLevelChildrenWrapper {
     position: relative;
     width: 90%;
