--- a/src/styles/HomePAge.css
+++ b/src/styles/HomePAge.css
@@ -14,7 +14,7 @@
 }
 
 .homeMessage {
-    font-family: 'Bangers', cursive;
+    font-family: 'Bangers';
     background-color: none;
     display: inline-block;
     position: relative;
