--- a/src/styles/WantList.css
+++ b/src/styles/WantList.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Bangers';
+
 .topLevelChildrenWrapper {
     position: relative;
     width: 90%;
@@ -24,6 +26,8 @@
     text-align: center;
     padding: 5px 0;
     margin: 0;
+    font-family: 'Bangers';
+    font-weight: lighter;
 }
 
 .wantlistWrapper ul{
