--- a/src/styles/Series.css
+++ b/src/styles/Series.css
@@ -25,7 +25,8 @@
     width: 50px;
     padding: 5px;
     background-color: white;
-    border: none;
+    border-style: solid;
+    border-color: black;
     border-radius: 5%;
     font-weight: bold;
 }
