--- a/src/styles/CheckList.css
+++ b/src/styles/CheckList.css
@@ -42,6 +42,13 @@
 
 .typeWrapper {
     text-align: center;
+    margin-top: 35px;
+    margin-bottom: 15px;
+}
+
+.showNum {
+    text-align: center;
+    margin-top: 20px;
 }
 
 @media only screen and (max-width: 500px) {
