--- a/src/styles/Series.css
+++ b/src/styles/Series.css
@@ -13,7 +13,7 @@
 
 .seriesName {
     padding: 0;
-    margin: 0 5px;
+    margin: 0 2px;
     font-size: 16px;
 }
 
@@ -23,7 +23,7 @@
 
 .showbutton {
     width: 50px;
-    padding: 5px;
+    padding: 5px 0;
     background-color: white;
     border-style: solid;
     border-color: black;
