--- a/src/styles/WantList.css
+++ b/src/styles/WantList.css
@@ -1,4 +1,7 @@
-@import 'https://fonts.googleapis.com/css?family=Bangers';
+@font-face {
+    font-family: KOMIKAX;
+    src: url(KOMIKAX_.ttf);
+}
 
 .topLevelChildrenWrapper {
     position: relative;
@@ -26,7 +29,7 @@
     text-align: center;
     padding: 5px 0;
     margin: 0;
-    font-family: 'Bangers';
+    font-family: 'KOMIKAX';
     font-weight: lighter;
 }
 
