--- a/src/styles/WantList.css
+++ b/src/styles/WantList.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: KOMIKAX;
-    src: url(KOMIKAX_.ttf);
+    src: url(BadaboomBB_Reg.ttf);
 }
 
 .topLevelChildrenWrapper {
