--- a/src/styles/CheckList.css
+++ b/src/styles/CheckList.css
@@ -2,10 +2,14 @@
     font-family: KOMIKAX;
     src: url(BadaboomBB_Reg.ttf);
 }
-
+.checkListWrapper{
+    background-color: white;
+    color: black;
+}
 .tOrHWrapper {
     background-color: dimgrey;
     width: 100%;
+    color: black;
 }
 
 .tOrHWrapper button {
@@ -40,6 +44,7 @@
     margin: 0 5%;
     top: 10px;
     background-color: white;
+    color: black;
     padding-bottom: 30px;
 }
 
